* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 0.10.0
- [puppetsync] Add EL9 support

* Tue Oct 10 2023 Steven Pritchard <steve@sicura.us> - 0.9.1
- Use `gh` instead of `hub` in GHA (see https://github.com/actions/runner-images/issues/8362)

* Fri Oct 06 2023 Steven Pritchard <steve@sicura.us> - 0.9.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.8.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.7.0
- Add RockyLinux 8 support

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.6.0
- Update from camptocamp/systemd to puppet/systemd

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.2
- Removed EL6 support

* Mon Mar 23 2020 Trevor Vaughan <tvaughan@onyxpont.com> - 0.4.1
- Add explicit support for setting the rescue/emergency shell on systemd systems.

* Thu Jan 09 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.0
- Add EL8 support
- Update the upper bound of simp-simplib to < 5.0.0

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.4.0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Tue Jun 04 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 0.3.0
- Add v2 compliance_markup data

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.3
- Use Simplib::Umask data type in lieu of validate_umask(),
  a deprecated simplib Puppet 3 function.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Aug 24 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.2
- Add support for Puppet 5 and OEL
- Update badges in README.md
